@@ -2436,7 +2436,9 @@ are set, either both UTFs are supported or both are not supported. */
     (void)PCRE_CONFIG(PCRE_CONFIG_MATCH_LIMIT_RECURSION, &lrc);
     printf("  Default recursion depth limit = %ld\n", lrc);
     (void)PCRE_CONFIG(PCRE_CONFIG_STACKRECURSE, &rc);
-    printf("  Match recursion uses %s\n", rc? "stack" : "heap");
+    printf("  Match recursion uses %s: ", rc? "stack" : "heap");
+    PCRE_EXEC(rc, NULL, NULL, NULL, -1, -1, 0, NULL, 0);
+    printf("frame size = %d bytes\n", -rc); 
     goto EXIT;
     }
   else if (strcmp(argv[op], "-help") == 0 ||
